--- a/src/main/webapp/web/css/styleIndex.css
+++ b/src/main/webapp/web/css/styleIndex.css
@@ -356,3 +356,55 @@ ul.menu > li.has-dropdown > ul.dropdown > li > a:hover{
     url(img/footer_bg_s1.png) repeat scroll right bottom transparent;
     background-size: contain;
 }
+
+.matches {
+    font-family: 'Dosis', sans-serif;
+    margin-right: 12.5%;
+    margin-left: 12.5%;
+    border-bottom: 2px solid #696969;
+    padding-bottom: 3px;
+}
+
+.match {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    border-bottom: 1px solid #b1b1b1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.match-info {
+    margin-right: 3.5%;
+    margin-left: 3.5%;
+    border-bottom: 1px solid #b1b1b1;
+    display: flex;
+    justify-content: space-between;
+}
+
+.coeff {
+    width: 20%;
+    margin-right: 1.5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.coeff-info {
+    width: 17%;
+    margin-right: 1.5%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.link-block-match {
+    color: rgba(0,0,0,.8);
+    text-decoration: none;
+}
+
+.link-block-match:visited {
+    color: rgba(0,0,0,.8);
+}
+
+.link-block-match:hover {
+    color: rgba(0,0,0,.5);
+}
