--- a/src/main/webapp/WEB-INF/jsp/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jsp/jspf/header.jspf
@@ -8,9 +8,9 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <header class="text-center">
     <ul class="menu">
-        <li><a href="../../index.html" class="link-block-menu"><p>Главная</p></a></li>
+        <li><a href="${pageContext.request.contextPath}/controller?command=go_to_main" class="link-block-menu"><p>Главная</p></a></li>
         <li class="has-dropdown">
-            <a href="#" class="link-block-menu"><p> <fmt:message key="header.profile"/> </p></a>
+            <a href="${pageContext.request.contextPath}/controller?command=go_to_profile" class="link-block-menu"><p> <fmt:message key="header.profile"/> </p></a>
             <ul class="dropdown animated-fast fadeInUpMenu" >
                 <li><a href="#">Мои ставки</a></li>
                 <li><a href="#">Кошелёк</a></li>
