--- a/src/main/webapp/WEB-INF/jsp/jspf/make_match.jspf
+++ b/src/main/webapp/WEB-INF/jsp/jspf/make_match.jspf
@@ -11,14 +11,40 @@
 <div id="modal_form">
     <span id="modal_close">X</span>
     <form action="controller" method="post">
-        <h3>Простое модальное окно</h3>
-        <p>Тут может быть рандомная обычная форма например.</p>
-        <p>Ваше имя<br />
-            <input type="text" name="your-name" value="" size="40" />
+        <h3>Регистрация матча</h3>
+        <p>Все поля обязательны для заполнения.</p>
+        <p>Первая команда: <br />
+            <input type="text" name="team1" value="" size="30" required />
         </p>
-        <p>Ваш телефон<br />
-            <input type="text" name="your-name" value="" size="40" />
+        <p>Вторая команда: <br />
+            <input type="text" name="team2" value="" size="30" required />
         </p>
+
+        <p>Дата проведения(гггг-мм-дд) <br/>
+            <input type="text" name="year" value="" size="4" required pattern="^[0-9]{4}" class="inputPole"/>-<input type="text" name="month" value="" size="2" required pattern="^[0-9]{2}$" class="inputPole"/>-<input type="text" name="day" value="" size="2" required pattern="^[0-9]{2}$" class="inputPole"/>
+        </p>
+
+        <p>Время проведения(чч:мм) <br/>
+            <input type="text" name="hour" value="" size="2" required pattern="^[0-9]{2}$" class="inputPole"/>:<input type="text" name="minute" value="" size="2" required pattern="^[0-9]{2}$" class="inputPole"/>
+        </p>
+
+        <div>
+            <p>Коэффициенты: <br/>
+            <p>Победа первой команды:
+                <input type="text" name="coefTeam1" value="" size="4" required />
+            </p>
+            <p>Победа второй команды:
+                <input type="text" name="coefTeam2" value="" size="4" required />
+            </p>
+            <p>Ничья:
+                <input type="text" name="coefDraw" value="" size="4" required />
+            </p>
+            <p>Точный счёт:
+                <input type="text" name="coefExAcc" value="" size="4" required />
+            </p>
+            </p>
+        </div>
+
         <p style="text-align: center; padding-bottom: 10px;">
             <input type="hidden" name="command" value="make_match"/>
             <input type="submit" value="Отправить" />
