--- a/src/main/webapp/web/css/styleRegistr.css
+++ b/src/main/webapp/web/css/styleRegistr.css
@@ -4,6 +4,9 @@
 
 body {
     background-image: url(img/back_img.jpg);
+	display: flex;
+	flex-direction: column;
+	justify-content:space-between;
 }
 
 
@@ -430,7 +433,7 @@ ul.menu > li.has-dropdown > ul.dropdown > li > a:hover{
 
 	.field-fname > input:invalid:not(:placeholder-shown) + span::after{
 		font-family: 'Courgette', cursive;
-		content : "Цифры и заглавные буквы не в начале строки недопустимы";	
+		content : "Цифры недопустимы";
 		width: 25%;
 		top: 20px;
 		color: #5f656c;
