--- a/src/main/webapp/WEB-INF/jsp/jspf/user_login.jspf
+++ b/src/main/webapp/WEB-INF/jsp/jspf/user_login.jspf
@@ -8,7 +8,7 @@
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <div class = "authorization">
     <div class="auth-form">
-        <form action="controller" method="get">
+        <form action="controller" method="post">
             <div class="input-left input-login">
                 <input type="text" name="login" placeholder='Логин' autocomplete="off" value=""/>
             </div>
