--- a/src/main/webapp/WEB-INF/jsp/jspf/change_coeff.jspf
+++ b/src/main/webapp/WEB-INF/jsp/jspf/change_coeff.jspf
@@ -6,30 +6,15 @@
   To change this template use File | Settings | File Templates.
 --%>
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<input style="margin-left: 5.5%;" id="go" type="button" value="Создать матч">
+<input style="margin-left: 15.5%;" id="go" type="button" value="Изменить коеффициенты"/>
 
 <div id="modal_form">
     <span id="modal_close">X</span>
     <form action="controller" method="post">
-        <h3>Регистрация матча</h3>
+        <h3>Изменение коэффициентов</h3>
         <p>Все поля обязательны для заполнения.</p>
-        <p>Первая команда: <br />
-            <input type="text" name="team1" value="" size="30" required />
-        </p>
-        <p>Вторая команда: <br />
-            <input type="text" name="team2" value="" size="30" required />
-        </p>
-
-        <p>Дата проведения(гггг-мм-дд) <br/>
-            <input type="text" name="year" value="" size="4" required pattern="^[0-9]{4}" class="inputPole"/>-<input type="text" name="month" value="" size="2" required pattern="^[0-9]{2}$" class="inputPole"/>-<input type="text" name="day" value="" size="2" required pattern="^[0-9]{2}$" class="inputPole"/>
-        </p>
-
-        <p>Время проведения(чч:мм) <br/>
-            <input type="text" name="hour" value="" size="2" required pattern="^[0-9]{2}$" class="inputPole"/>:<input type="text" name="minute" value="" size="2" required pattern="^[0-9]{2}$" class="inputPole"/>
-        </p>
 
         <div>
-            <p>Коэффициенты: <br/>
             <p>Победа первой команды:
                 <input type="text" name="coefTeam1" value="" size="4" required />
             </p>
@@ -45,8 +30,8 @@
         </div>
 
         <p style="text-align: center; padding-bottom: 10px;">
-            <input type="hidden" name="command" value="make_match"/>
-            <input type="submit" value="Отправить" />
+            <input type="hidden" name="command" value="change_coeff"/>
+            <input type="submit" value="Подтвердить" />
         </p>
     </form>
 </div>
