--- a/src/main/webapp/web/css/styleMakeBet.css
+++ b/src/main/webapp/web/css/styleMakeBet.css
@@ -74,9 +74,9 @@ li {
         font-size: 10pt;
 
         width: 110px;
-        -webkit-box-shadow: 0px 14px 33px -9px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 14px 33px -9px rgba(0,0,0,0.75);
-        box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 0 14px 33px -9px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0 14px 33px -9px rgba(0,0,0,0.75);
+        box-shadow: 0 14px 33px -9px rgba(0, 0, 0, 0.75);
         top: 40px;
         text-align: left;
         background: #000;
@@ -133,9 +133,9 @@ li {
         font-size: 10pt;
 
         width: 110px;
-        -webkit-box-shadow: 0px 14px 33px -9px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 14px 33px -9px rgba(0,0,0,0.75);
-        box-shadow: 0px 14px 33px -9px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 0 14px 33px -9px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0 14px 33px -9px rgba(0,0,0,0.75);
+        box-shadow: 0 14px 33px -9px rgba(0, 0, 0, 0.75);
         text-align: left;
         background: #000;
         padding: 15px;
@@ -159,7 +159,7 @@ li {
 
 .link-block-remember-pass {
     font-size: 14px;
-    padding: 0px 5px;
+    padding: 0 5px;
     color: rgba(0,0,0,.8);
     text-decoration: underline;
 }
