--- a/src/main/webapp/WEB-INF/jsp/jspf/set_results.jspf
+++ b/src/main/webapp/WEB-INF/jsp/jspf/set_results.jspf
@@ -6,56 +6,50 @@
   To change this template use File | Settings | File Templates.
 --%>
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<input style="margin-left: 15.5%;" id="go" type="button" value="Изменить коеффициенты"/>
+<input style="margin-left: 15.5%;" id="go_res" type="button" value="Установить результаты "/>
 
-<div id="modal_form">
-    <span id="modal_close">X</span>
-    <form action="controller" method="post" class="changeCoef">
-        <h3>Изменение коэффициентов</h3>
+<div id="modal_form_res">
+    <span id="modal_close_res">X</span>
+    <form action="controller" method="post">
+        <h3>Введите результыты матча</h3>
         <p>Все поля обязательны для заполнения.</p>
 
         <div>
-            <p>Победа первой команды:
-                <input type="text" name="coefTeam1" value="" size="4" required />
+            <p>Голы <c:out value="${sessionScope.match.team1}"/>:
+                <input type="text" name="goalsTeam1" value="" size="4" required />
             </p>
-            <p>Победа второй команды:
-                <input type="text" name="coefTeam2" value="" size="4" required />
-            </p>
-            <p>Ничья:
-                <input type="text" name="coefDraw" value="" size="4" required />
-            </p>
-            <p>Точный счёт:
-                <input type="text" name="coefExAcc" value="" size="4" required />
+            <p>Голы <c:out value="${sessionScope.match.team2}"/>:
+                <input type="text" name="goalsTeam2" value="" size="4" required />
             </p>
         </div>
 
         <p style="text-align: center; padding-bottom: 10px;">
             <input type="hidden" name="matchId" value="${sessionScope.match.id}"/>
-            <input type="hidden" name="command" value="change_coeff"/>
-            <input type="button" value="Подтвердить" onclick="return confirmSubm($('.changeCoef'))"/>
+            <input type="hidden" name="command" value="SET_RESULT"/>
+            <input type="button" value="Подтвердить" />
         </p>
     </form>
 </div>
-<div id="overlay"></div>
+<div id="overlay_res"></div>
 
 <script>
     $(document).ready(function() { // вся мaгия пoсле зaгрузки стрaницы
-        $('#go').click( function(event){ // лoвим клик пo ссылки с id="go"
+        $('#go_res').click( function(event){ // лoвим клик пo ссылки с id="go"
             event.preventDefault(); // выключaем стaндaртную рoль элементa
-            $('#overlay').fadeIn(400, // снaчaлa плaвнo пoкaзывaем темную пoдлoжку
+            $('#overlay_res').fadeIn(400, // снaчaлa плaвнo пoкaзывaем темную пoдлoжку
                 function(){ // пoсле выпoлнения предъидущей aнимaции
-                    $('#modal_form')
+                    $('#modal_form_res')
                         .css('display', 'block') // убирaем у мoдaльнoгo oкнa display: none;
                         .animate({opacity: 1, top: '50%'}, 200); // плaвнo прибaвляем прoзрaчнoсть oднoвременнo сo съезжaнием вниз
                 });
         });
         /* Зaкрытие мoдaльнoгo oкнa, тут делaем тo же сaмoе нo в oбрaтнoм пoрядке */
-        $('#modal_close, #overlay').click( function(){ // лoвим клик пo крестику или пoдлoжке
-            $('#modal_form')
+        $('#modal_close_res, #overlay_res').click( function(){ // лoвим клик пo крестику или пoдлoжке
+            $('#modal_form_res')
                 .animate({opacity: 0, top: '45%'}, 200,  // плaвнo меняем прoзрaчнoсть нa 0 и oднoвременнo двигaем oкнo вверх
                     function(){ // пoсле aнимaции
                         $(this).css('display', 'none'); // делaем ему display: none;
-                        $('#overlay').fadeOut(400); // скрывaем пoдлoжку
+                        $('#overlay_res').fadeOut(400); // скрывaем пoдлoжку
                     }
                 );
         });
