--- a/src/main/webapp/WEB-INF/jsp/jspf/set_results.jspf
+++ b/src/main/webapp/WEB-INF/jsp/jspf/set_results.jspf
@@ -26,7 +26,7 @@
         <p style="text-align: center; padding-bottom: 10px;">
             <input type="hidden" name="matchId" value="${sessionScope.match.id}"/>
             <input type="hidden" name="command" value="SET_RESULT"/>
-            <input type="button" value="Подтвердить" />
+            <input type="submit" value="Подтвердить" />
         </p>
     </form>
 </div>
