--- a/src/main/webapp/WEB-INF/jsp/jspf/user_login.jspf
+++ b/src/main/webapp/WEB-INF/jsp/jspf/user_login.jspf
@@ -11,11 +11,11 @@
     <div class="auth-form">
         <form action="controller" method="post">
             <div class="input-left input-login">
-                <input type="text" name="login" placeholder='Логин' autocomplete="off" value=""/>
+                <input type="text" name="login" placeholder='Логин' autocomplete="off" value="" required/>
             </div>
 
             <div class="input-right input-pass">
-                <input type="password" name="password" class="formlogin" placeholder='Пароль' autocomplete="off" value=""/>
+                <input type="password" name="password" class="formlogin" placeholder='Пароль' autocomplete="off" value="" required/>
             </div>
 
             <div class="input-left input-enter">
@@ -28,13 +28,13 @@
             </div>
 
             <div class="input-left input-registr">
-                <a href="${pageContext.request.contextPath}/controller?command=go_to_registration" title="Регистрация в букмекерской конторе Fire Bets" class="link-block-registration">Регистрация </a>
+                <a href="${pageContext.request.contextPath}/controller?command=go_to_registration" title="Регистрация в букмекерской конторе Fire Bets" class="link-block-registration" style="height: 100%">Регистрация </a>
             </div>
         </form>
 
         <div class="input-left" style="margin-left: 100%">
             <form action="controller" method="get">
-                <input type="hidden" name="from" value="${fn:escapeXml(param.from)}" />
+                <input type="hidden" name="from" value="${fn:escapeXml(param.from) != null ? fn:escapeXml(param.from) : ''}" />
                 <input type="hidden" name="command" value="CHANGE_LOCALE"/>
                 <input type="submit" value="<fmt:message key="header.icon"/>"/>
             </form>
