--- a/src/main/webapp/WEB-INF/jsp/jspf/change_coeff.jspf
+++ b/src/main/webapp/WEB-INF/jsp/jspf/change_coeff.jspf
@@ -6,7 +6,7 @@
   To change this template use File | Settings | File Templates.
 --%>
 <%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<input style="margin-left: 1%;" id="go" type="button" value="Изменить коеффициенты"/>
+<input style="margin: 1%;" id="go" type="button" value="Изменить коеффициенты"/>
 
 <div id="modal_form">
     <span id="modal_close">X</span>
